# Master-Thesis-Drone-AI-Autopilot

./: .gitignore  .gitmodules  H_rotation_table.txt  README.md
catkin_ws/src/: ssh-add  ssh-add.pub
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/ddpg_controller/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/ddpg_controller/scripts/: Actor.py  Critic.py  DDPGAgent.py  OUNoise.py  ReplayBuffer.py  ddpg.py  ddpg_apr27.py  ddpg_descend.py  ddpg_hover_descend.py  ddpg_lab.py  ddpg_may5_2.py  ddpgmar2.py  pid.py
catkin_ws/src/ddpg_controller/scripts/helpers/: get_max_min_states.py  plot_action_magnitudes.py  plot_critic_loss.py  plot_gauss_boundary.py  plot_gaussian.py  plot_histogram.py  plot_mean_std.py  plot_mean_std_descend.py  plot_q_values.py  plot_rewards.py  plot_state_trajectories.py
catkin_ws/src/key_teleop/: README.md
catkin_ws/src/setup/: CMakeLists.txt  package.xml
catkin_ws/src/uav_vision/: CMakeLists.txt  package.xml
catkin_ws/src/uav_vision/launch/: joystick.launch  real_ar2.launch  sim_ar2.launch
catkin_ws/src/uav_vision/scripts/: FSM_states.py  automated_landing.py  combined_filter.py  complete_mission.py  config.py  cv_module.py  data_collection.py  dead_reckoning.py  double_mission.py  kalman_filter.py  mock_gps.py  pid_controller.py  still_photo.py  tcv_filter.py  timer.py  yolo_cv_module.py
catkin_ws/src/utilities/: CMakeLists.txt  error_calculations.py  package.xml  (+1 more)
investigations/: canny_edge.py  conic_extraction.py  contour.py  cv_module.py  cv_module_new_old.py  cv_module_old.py  design_helipad.py  detect_h.py  detect_h_old.py  harris_corner.py  moments.py  position.txt  position_1_corner.txt  position_2_corners_long_side.txt  position_above.txt  real_flight_filter.py  regression.py  save_image.py  vectors.py
investigations/anafi_worlds/: animation.world  ocean.world
investigations/dataset/: position_1.txt  position_2.txt  position_3.txt
investigations_bull/: H_rotation_table.py  bb_calculations.py  calc_theta.py
(+74 files in other folders)
